--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,4 +1,5 @@
 [bar/bottom]
+monitor = ${env:MONITOR:}
 bottom = true
 width = 100%
 height = 34
@@ -19,9 +20,11 @@ font-2 = termsynu:size=8:antialias=false;-2
 font-3 = FontAwesome:size=10;0
 
 modules-center = date
-modules-right = battery
 
-override-redirect = true
+#Laptop only
+#modules-right = battery
+
+override-redirect = false
 wm-restack = i3
 
 
