--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -1,3 +1,12 @@
+#!/usr/bin/env bash
+#
+# Neofetch config file
+# https://github.com/dylanaraps/neofetch
+
+# Speed up script by not using unicode
+export LC_ALL=C
+export LANG=C
+
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
@@ -5,37 +14,35 @@ print_info() {
     info underline
 
     info "OS" distro
-    info "Host" model
     info "Kernel" kernel
-    info "Uptime" uptime
-    info "Packages" packages
-    info "Shell" shell
-    info "Resolution" resolution
-    info "DE" de
+    info line_break
+
     info "WM" wm
-    info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
+    info "Shell" shell
     info "Terminal" term
-    info "Terminal Font" term_font
+    info line_break
+
     info "CPU" cpu
     info "GPU" gpu
     info "Memory" memory
+    info line_break
 
-    # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
-    # info "Disk" disk
-    # info "Battery" battery
+    info "CPU Usage" cpu_usage
+    info "Disk" disk
+    info "Battery" battery
     # info "Font" font
     # info "Song" song
     # info "Local IP" local_ip
     # info "Public IP" public_ip
     # info "Users" users
-    # info "Locale" locale  # This only works on glibc systems.
+    # info "Birthday" birthday
 
     info line_break
-    info cols
     info line_break
+    info line_break
+    info cols
+    info cols
+    info cols
 }
 
 
@@ -84,7 +91,7 @@ os_arch="on"
 
 # Shorten the output of the uptime function
 #
-# Default: 'on'
+# Default: 'off'
 # Values:  'on', 'off', 'tiny'
 # Flag:    --uptime_shorthand
 #
@@ -92,23 +99,7 @@ os_arch="on"
 # on:   '2 days, 10 hours, 3 mins'
 # off:  '2 days, 10 hours, 3 minutes'
 # tiny: '2d 10h 3m'
-uptime_shorthand="on"
-
-
-# Packages
-
-
-# Show/Hide Package Manager names.
-#
-# Default: 'tiny'
-# Values:  'on', 'tiny' 'off'
-# Flag:    --package_managers
-#
-# Example:
-# on:   '998 (pacman), 8 (flatpak), 4 (snap)'
-# tiny: '908 (pacman, flatpak, snap)'
-# off:  '908'
-package_managers="on"
+uptime_shorthand="off"
 
 
 # Shell
@@ -142,35 +133,25 @@ shell_version="on"
 
 # CPU speed type
 #
-# Default: 'bios_limit'
-# Values: 'scaling_cur_freq', 'scaling_min_freq', 'scaling_max_freq', 'bios_limit'.
+# Default: 'bios'
+# Values:  'current', 'min', 'max', 'bios',
 # Flag:    --speed_type
 # Supports: Linux with 'cpufreq'
-# NOTE: Any file in '/sys/devices/system/cpu/cpu0/cpufreq' can be used as a value.
-speed_type="bios_limit"
+speed_type="bios"
 
-# CPU speed shorthand
+# Shorten the output of the CPU function
 #
 # Default: 'off'
-# Values: 'on', 'off'.
-# Flag:    --speed_shorthand
-# NOTE: This flag is not supported in systems with CPU speed less than 1 GHz
+# Values:  'on', 'off', 'tiny', 'name', 'speed'
+# Flag:    --cpu_shorthand
 #
 # Example:
 # on:    'i7-6500U (4) @ 3.1GHz'
-# off:   'i7-6500U (4) @ 3.100GHz'
-speed_shorthand="off"
-
-# Enable/Disable CPU brand in output.
-#
-# Default: 'on'
-# Values:  'on', 'off'
-# Flag:    --cpu_brand
-#
-# Example:
-# on:   'Intel i7-6500U'
-# off:  'i7-6500U (4)'
-cpu_brand="on"
+# off:   'Intel i7-6500U (4) @ 3.1GHz'
+# tiny:  'i7-6500U (4)'
+# name:  'Intel i7-6500U (4)'
+# speed: '3.1GHz'
+cpu_shorthand="off"
 
 # CPU Speed
 # Hide/Show CPU speed.
@@ -203,15 +184,12 @@ cpu_cores="logical"
 # Note the temperature is added to the regular CPU function.
 #
 # Default: 'off'
-# Values:  'C', 'F', 'off'
+# Values:  'on', 'off'
 # Flag:    --cpu_temp
-# Supports: Linux, BSD
-# NOTE: For FreeBSD and NetBSD-based systems, you'll need to enable
-#       coretemp kernel module. This only supports newer Intel processors.
+# Supports: Linux
 #
 # Example:
-# C:   'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
-# F:   'Intel i7-6500U (4) @ 3.1GHz [82.0°F]'
+# on:  'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
 # off: 'Intel i7-6500U (4) @ 3.1GHz'
 cpu_temp="off"
 
@@ -229,25 +207,6 @@ cpu_temp="off"
 # on:  'AMD HD 7950'
 # off: 'HD 7950'
 gpu_brand="on"
-
-# Which GPU to display
-#
-# Default: 'all'
-# Values:  'all', 'dedicated', 'integrated'
-# Flag:    --gpu_type
-# Supports: Linux
-#
-# Example:
-# all:
-#   GPU1: AMD HD 7950
-#   GPU2: Intel Integrated Graphics
-#
-# dedicated:
-#   GPU1: AMD HD 7950
-#
-# integrated:
-#   GPU1: Intel Integrated Graphics
-gpu_type="all"
 
 
 # Resolution
@@ -314,106 +273,10 @@ gtk3="on"
 public_ip_host="http://ident.me"
 
 
-
-# Disk
-
-
-# Which disks to display.
-# The values can be any /dev/sdXX, mount point or directory.
-# NOTE: By default we only show the disk info for '/'.
-#
-# Default: '/'
-# Values:  '/', '/dev/sdXX', '/path/to/drive'.
-# Flag:    --disk_show
-#
-# Example:
-# disk_show=('/' '/dev/sdb1'):
-#      'Disk (/): 74G / 118G (66%)'
-#      'Disk (/mnt/Videos): 823G / 893G (93%)'
-#
-# disk_show=('/'):
-#      'Disk (/): 74G / 118G (66%)'
-#
-disk_show=('/')
-
-# Disk subtitle.
-# What to append to the Disk subtitle.
-#
-# Default: 'mount'
-# Values:  'mount', 'name', 'dir'
-# Flag:    --disk_subtitle
-#
-# Example:
-# name:   'Disk (/dev/sda1): 74G / 118G (66%)'
-#         'Disk (/dev/sdb2): 74G / 118G (66%)'
-#
-# mount:  'Disk (/): 74G / 118G (66%)'
-#         'Disk (/mnt/Local Disk): 74G / 118G (66%)'
-#         'Disk (/mnt/Videos): 74G / 118G (66%)'
-#
-# dir:    'Disk (/): 74G / 118G (66%)'
-#         'Disk (Local Disk): 74G / 118G (66%)'
-#         'Disk (Videos): 74G / 118G (66%)'
-disk_subtitle="mount"
-
-
 # Song
 
 
-# Manually specify a music player.
-#
-# Default: 'auto'
-# Values:  'auto', 'player-name'
-# Flag:    --music_player
-#
-# Available values for 'player-name':
-#
-# amarok
-# audacious
-# banshee
-# bluemindo
-# clementine
-# cmus
-# deadbeef
-# deepin-music
-# dragon
-# elisa
-# exaile
-# gnome-music
-# gmusicbrowser
-# Google Play
-# guayadeque
-# iTunes
-# juk
-# lollypop
-# mocp
-# mopidy
-# mpd
-# pogo
-# pragha
-# qmmp
-# quodlibet
-# rhythmbox
-# sayonara
-# smplayer
-# spotify
-# tomahawk
-# vlc
-# xmms2d
-# yarock
-music_player="auto"
-
-# Format to display song information.
-#
-# Default: '%artist% - %album% - %title%'
-# Values:  '%artist%', '%album%', '%title%'
-# Flag:    --song_format
-#
-# Example:
-# default: 'Song: Jet - Get Born - Sgt Major'
-song_format="%artist% - %album% - %title%"
-
-# Print the Artist, Album and Title on separate lines
+# Print the Artist and Title on seperate lines
 #
 # Default: 'off'
 # Values:  'on', 'off'
@@ -421,17 +284,44 @@ song_format="%artist% - %album% - %title%"
 #
 # Example:
 # on:  'Artist: The Fratellis'
-#      'Album: Costello Music'
 #      'Song: Chelsea Dagger'
 #
-# off: 'Song: The Fratellis - Costello Music - Chelsea Dagger'
+# off: 'Song: The Fratellis - Chelsea Dagger'
 song_shorthand="off"
 
-# 'mpc' arguments (specify a host, password etc).
+
+# Birthday
+
+
+# Shorten the output of the Birthday functon.
 #
-# Default:  ''
-# Example: mpc_args=(-h HOST -P PASSWORD)
-mpc_args=()
+# Default:  'off'
+# Values:   'on', 'off'
+# Flag:     --birthday_shorthand
+# Supports: 'off' doesn't work on OpenBSD and NetBSD.
+#
+# Example:
+# on:  'Thu 14 Apr 2016 11:50 PM'
+# off: '2016-04-14 23:50:55'
+birthday_shorthand="off"
+
+# Whether to show the time in the output
+#
+# Default:  'on'
+# Values:   'on', 'off'
+# Flag:     --birthday_time
+#
+# Example:
+# on:  'Thu 14 Apr 2016 11:50 PM'
+# off: 'Thu 14 Apr 2016'
+birthday_time="on"
+
+# Date format to use when printing birthday
+#
+# Default:  '+%a %d %b %Y %l:%M %p'
+# Values:   'date format'
+# Flag:     --birthday_format
+birthday_format="+%a %d %b %Y %l:%M %p"
 
 
 # Text Colors
@@ -481,7 +371,8 @@ underline_char="-"
 
 
 # Color block range
-# The range of colors to print.
+# Start/End refer to the range of colors
+# to print in the blocks.
 #
 # Default:  '0', '7'
 # Values:   'num'
@@ -489,12 +380,13 @@ underline_char="-"
 #
 # Example:
 #
-# Display colors 0-7 in the blocks.  (8 colors)
+# Display colors 0-7 in the blocks.
 # neofetch --block_range 0 7
 #
-# Display colors 0-15 in the blocks. (16 colors)
+# Display colors 0-15 in the blocks.
 # neofetch --block_range 0 15
-block_range=(0 7)
+start=0
+end=7
 
 # Toggle color blocks
 #
@@ -583,85 +475,39 @@ battery_display="off"
 disk_display="off"
 
 
-# Backend Settings
-
-
-# Image backend.
-#
-# Default:  'ascii'
-# Values:   'ascii', 'caca', 'jp2a', 'iterm2', 'off', 'termpix', 'pixterm', 'tycat', 'w3m'
-# Flag:     --backend
-image_backend="ascii"
-
-# Image Source
-#
-# Which image or ascii file to display.
-#
-# Default:  'auto'
-# Values:   'auto', 'ascii', 'wallpaper', '/path/to/img', '/path/to/ascii', '/path/to/dir/'
-# Flag:     --source
-#
-# NOTE: 'auto' will pick the best image source for whatever image backend is used.
-#       In ascii mode, distro ascii art will be used and in an image mode, your
-#       wallpaper will be used.
-image_source="auto"
-
-
-# Ascii Options
-
-
-# Ascii distro
-# Which distro's ascii art to display.
-#
-# Default: 'auto'
-# Values:  'auto', 'distro_name'
-# Flag:    --ascii_distro
-#
-# NOTE: Arch and Ubuntu have 'old' logo variants.
-#       Change this to 'arch_old' or 'ubuntu_old' to use the old logos.
-# NOTE: Ubuntu has flavor variants.
-#       Change this to 'Lubuntu', 'Xubuntu', 'Ubuntu-GNOME' or 'Ubuntu-Budgie' to use the flavors.
-# NOTE: Arch, Crux and Gentoo have a smaller logo variant.
-#       Change this to 'arch_small', 'crux_small' or 'gentoo_small' to use the small logos.
-ascii_distro="auto"
-
-# Ascii Colors
-#
-# Default:  'distro'
-# Values:   'distro', 'num' 'num' 'num' 'num' 'num' 'num'
-# Flag:     --ascii_colors
-#
-# Example:
-# ascii_colors=(distro)      - Ascii is colored based on Distro colors.
-# ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(distro)
-
-# Bold ascii logo
-# Whether or not to bold the ascii logo.
-#
-# Default: 'on'
-# Values:  'on', 'off'
-# Flag:    --ascii_bold
-ascii_bold="on"
-
-
 # Image Options
 
 
-# Image loop
-# Setting this to on will make neofetch redraw the image constantly until
-# Ctrl+C is pressed. This fixes display issues in some terminal emulators.
+# Image Source
 #
-# Default:  'off'
-# Values:   'on', 'off'
-# Flag:     --loop
-image_loop="off"
+# Default:  'ascii'
+# Values:   'ascii', 'wallpaper', '/path/to/img', '/path/to/dir/', 'off'
+# Flag:     --image
+#
+# NOTE: Change this to 'wallpaper', '/path/to/img' or /path/to/dir/' to enable image mode. You can also launch neofetch with '--image wallpaper' and etc.
+image_source="/home/eduard/.config/neofetch/"
 
 # Thumbnail directory
 #
 # Default: '~/.cache/thumbnails/neofetch'
 # Values:  'dir'
 thumbnail_dir="${XDG_CACHE_HOME:-${HOME}/.cache}/thumbnails/neofetch"
+
+# w3m-img path
+# Only works with the w3m backend.
+#
+# NOTE: Only change this if "neofetch -v" says that it "couldn't find w3m-img".
+# Neofetch has a function that automatically finds w3m-img for you. It looks
+# in the following directories:
+#    /usr/lib/w3m/w3mimgdisplay
+#    /usr/libexec/w3m/w3mimgdisplay
+#    /usr/lib64/w3m/w3mimgdisplay
+#    /usr/libexec64/w3m/w3mimgdisplay
+# If w3m-img is installed elsewhere on your system, open an issue on the repo
+# and I'll add it to the function inside the script. If w3m-img is installed
+# in a non-standard way (in your home folder, etc) then change the variable
+# below to the custom location. Otherwise, don't touch this.
+w3m_img_path="/usr/lib/w3m/w3mimgdisplay"
 
 # Crop mode
 #
@@ -691,7 +537,7 @@ crop_offset="center"
 #          --size
 image_size="auto"
 
-# Gap between image and text
+# Ggap between image and text
 #
 # Default: '3'
 # Values:  'num', '-num'
@@ -717,11 +563,138 @@ xoffset=0
 background_color=
 
 
-# Misc Options
+# Ascii Options
 
-# Stdout mode
-# Turn off all colors and disables image backend (ASCII/Image).
-# Useful for piping into another command.
+
+# Default ascii image to use
+# When this is set to distro it will use your
+# distro's logo as the ascii.
+#
+# Default: 'distro'
+# Values:  'distro', '/path/to/ascii_file'
+# Flag:    --ascii
+ascii="distro"
+
+# Ascii distro
+# Which distro's ascii art to display.
+#
+# Default: 'auto'
+# Values:  'auto', 'distro_name'
+# Flag:    --ascii_distro
+#
+# NOTE: Arch and Ubuntu have 'old' logo varients.
+#       Change this to 'arch_old' or 'ubuntu_old' to use the old logos.
+# NOTE: Ubuntu has flavor varients.
+#       Change this to 'Lubuntu', 'Xubuntu', 'Ubuntu-GNOME' or 'Ubuntu-Budgie' to use the flavors.
+ascii_distro="auto"
+
+# Ascii Colors
+#
+# Default:  'distro'
+# Values:   'distro', 'num' 'num' 'num' 'num' 'num' 'num'
+# Flag:     --ascii_colors
+#
+# Example:
+# ascii_colors=(distro)      - Ascii is colored based on Distro colors.
+# ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
+ascii_colors=(distro)
+
+# Logo size
+# Arch, Crux and Gentoo have a smaller logo
+# variant. Changing the value below to small
+# will make neofetch use the small logo.
+#
+# Default: 'normal'
+# Values:  'normal', 'small'
+# Flag:    --ascii_logo_size
+ascii_logo_size="normal"
+
+# Bold ascii logo
+# Whether or not to bold the ascii logo.
+#
+# Default: 'on'
+# Values:  'on', 'off'
+# Flag:    --ascii_bold
+ascii_bold="on"
+
+
+# Scrot Options
+
+
+# Whether or not to always take a screenshot
+# You can manually take a screenshot with "--scrot" or "-s"
+#
 # Default: 'off'
-# Values: 'on', 'off'
-stdout="off"
+# Values:  'on', 'off'
+# Flags:   --scrot
+#          -s
+scrot="off"
+
+# Screenshot Program
+# Neofetch will automatically use whatever screenshot tool
+# is installed on your system.
+#
+# If 'neofetch -v' says that it couldn't find a screenshot
+# tool or you're using a custom tool then you can change
+# the option below to a custom command.
+#
+# Default: 'auto'
+# Values:  'auto' 'cmd -flags'
+# Flag:    --scrot_cmd
+scrot_cmd="auto"
+
+# Screenshot Directory
+# Where to save the screenshots
+#
+# Default: '~/Pictures/'
+# Values:  'dir'
+# Flag:    --scrot_dir
+#
+# Note: Neofetch won't create the directory if it doesn't exist.
+scrot_dir="$HOME/Pictures/"
+
+# Screenshot Filename
+# What to name the screenshots
+#
+# Default: 'neofetch-$(date +%F-%I-%M-%S-${RANDOM}).png'
+# Values:  'string'
+# Flag:    --scrot_name
+scrot_name="neofetch-$(date +%F-%I-%M-%S-${RANDOM}).png"
+
+# Image upload host
+# Where to upload the image.
+#
+# Default: 'teknik'
+# Values:  'imgur', 'teknik'
+# Flag:    --image_host
+#
+# NOTE: If you'd like another image host to be added to Neofetch.
+#       Open an issue on github.
+image_host="teknik"
+
+
+# Config Options
+
+
+# Enable/Disable config file
+#
+# Default: 'on'
+# Values:  'on', 'off'
+# Flag:    --config
+# --config off, none
+#
+# Note: This option is only used when neofetch sources this config
+# as a default config and NOT as a user config. Changing this in
+# your user config won't actually do anything.
+config="on"
+
+# Path to custom config file location
+#
+# Default: '${XDG_CONFIG_HOME:-${HOME}/.config}/neofetch/config'
+# Values:  '/path/to/config'
+# Flag:    --config_file
+#
+# Note: This option is only used when neofetch sources this config
+# as a default config and NOT as a user config. Changing this in
+# your user config won't actually do anything.
+config_file="${XDG_CONFIG_HOME:-${HOME}/.config}/neofetch/config"
