--- a/config/i3/config
+++ b/config/i3/config
@@ -200,6 +200,16 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id picom
 exec_always --no-startup-id clipmenud
 exec setxkbmap de
+
+exec setxkbmap -option caps:escape
+# disable trackpad
+exec xinput set-prop "SynPS/2 Synaptics TouchPad" "Device Enabled" 0
+
+# set trackpoint options
+exec echo 190 | sudo tee /sys/devices/platform/i8042/serio1/serio2/sensitivity
+exec echo 100 | sudo tee /sys/devices/platform/i8042/serio1/serio2/speed
+
+
 #####################
 #  Custom Keybinds  #
 #####################
