--- a/config/i3/config
+++ b/config/i3/config
@@ -41,7 +41,7 @@ floating_modifier $mod
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec i3-dmenu-desktop
+bindsym $mod+d exec "rofi -modes drun,run,filebrowser,ssh,emoji,calc -theme breeze-dark -show drun -show-icons -sidebar-mode"
 
 # change focus
 bindsym $mod+h focus left
